--- a/eas.html
+++ b/eas.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="eas.css" />
   </head>
   <body>
+    <button></button>
     <script src="eas.js"></script>
   </body>
 </html>
