added ability to create board into ANY amount of squares in the same area

--- a/eas.html
+++ b/eas.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="eas.css" />
   </head>
   <body>
-    <button></button>
+    <button class="board">Create New Board</button>
     <script src="eas.js"></script>
   </body>
 </html>
